syntax = "proto3";

package fetch_datas;
option go_package = "/pb";

service CollectorService{
  rpc CollectorPosts(Empty) returns(Result);
}

message Empty{}

message Result{
  string statusMessage = 1;
}
